home page edited

--- a/index.html
+++ b/index.html
@@ -24,9 +24,20 @@
         <li><a href="#contact">Contact</a></li>           
       </ul>
     </header>
-
-
-
+    <!--Home-->
+    <div class="home-line">
+      <section class="home" id="home">
+        <div class="home-text">
+          <span>Welcome To</span>
+          <h1>HSIN WANG Bakery</h1>
+          <h2>Happiness is a <br>tap away</h2>
+          <div class="bth">Order</div>
+        </div>
+        <div class="home-img">
+          <img src="img/home-img.jpg">
+        </div>
+    </section>
+    </div>
 
 
     <!-- Link to Custom Js-->
