decoration more for homepage

--- a/index.html
+++ b/index.html
@@ -31,23 +31,30 @@
           <span>Welcome To</span>
           <h1>HSIN WANG Bakery</h1>
           <h2>Happiness is a <br>tap away</h2>
-          <div class="bth">Order</div>
+          <a href="#" class="btn">Order</a>
         </div>
         <div class="home-img">
           <img src="img/home-img.jpg">
         </div>
     </section>
     </div>
+    <section class="shop" id="shop">
+      <div class="heading">
+        <span>Shop Now</span>
+        <h1>Shop Cake</h1>
+      </div>
+      <div class="shop-container">
+        <div class="box">
+          <div class="box-img">
+            <img src="img/cake-collection.png" alt="" srcset="">
+          </div>
+        </div>
+      </div>
+    </section>
 
 
     <!-- Link to Custom Js-->
-     <script src="main.js"></script>
-
-    <h1>歡迎來到我的網頁</h1>
-    <button id="myButton">點我</button>
-    <p id="message"></p>
-
-    <script src="script.js"></script> <!-- 引入 JavaScript 文件 -->
+    <script src="main.js"></script>
 </body>
 
 </html>
