edit store page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>欣旺麵包店 | Taiwan</title>
+    <title>欣旺麵包店 HSIN WANG | Taiwan </title>
     <!--lindk to Css-->
     <link rel="stylesheet" href="style.css">
     <!--Box Icons-->
@@ -20,6 +20,7 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#order">Order</a></li>
         <li><a href="#store">Store</a></li> 
+        <li><a href="#store">Q&A</a></li> 
         <li><a href="#about">About</a></li>          
         <li><a href="#contact">Contact</a></li>           
       </ul>
@@ -29,29 +30,96 @@
       <section class="home" id="home">
         <div class="home-text">
           <span>Welcome To</span>
-          <h1>HSIN WANG Bakery</h1>
+          <h1>欣旺麵包店</h1>
           <h2>Happiness is a <br>tap away</h2>
           <a href="#" class="btn">Order</a>
         </div>
         <div class="home-img">
           <img src="img/home-img.jpg">
         </div>
-    </section>
+      </section>
     </div>
-    <section class="shop" id="shop">
+    <!--Order-->
+    <section class="order" id="order">
       <div class="heading">
-        <span>Shop Now</span>
-        <h1>Shop Cake</h1>
+        <span>立即訂購</span>
+        <h1>訂購蛋糕</h1>
       </div>
-      <div class="shop-container">
+      <div class="order-container">
         <div class="box">
           <div class="box-img">
-            <img src="img/cake-collection.png" alt="" srcset="">
+            <img src="img/cake-2.jpg" alt="" srcset="">
           </div>
+          <div class="stars">
+              <i class='bx bxs-star'></i>
+              <i class='bx bxs-star'></i>
+              <i class='bx bxs-star'></i>
+              <i class='bx bxs-star'></i>
+              <i class='bx bxs-star-half' ></i>
+          </div>
+          <h2>紅烏龍芒果櫻桃蛋糕</h2>
+          <span>NTD.1,480</span>
+          <a href="#" class="btn">立即訂購</a>
         </div>
+      
+
+        <div class="box">
+          <div class="box-img">
+            <img src="img/cake-2.jpg" alt="" srcset="">
+          </div>
+          <div class="stars">
+              <i class='bx bxs-star'></i>
+              <i class='bx bxs-star'></i>
+              <i class='bx bxs-star'></i>
+              <i class='bx bxs-star'></i>
+              <i class='bx bxs-star-half' ></i>
+          </div>
+          <h2>紅烏龍芒果櫻桃蛋糕</h2>
+          <span>NTD.1,480</span>
+          <a href="#" class="btn">立即訂購</a>
+        </div>
+
+        <div class="box">
+          <div class="box-img">
+            <img src="img/cake-2.jpg" alt="" srcset="">
+          </div>
+          <div class="stars">
+              <i class='bx bxs-star'></i>
+              <i class='bx bxs-star'></i>
+              <i class='bx bxs-star'></i>
+              <i class='bx bxs-star'></i>
+              <i class='bx bxs-star-half' ></i>
+          </div>
+          <h2>紅烏龍芒果櫻桃蛋糕</h2>
+          <span>NTD.1,480</span>
+          <a href="#" class="btn">立即訂購</a>
+        </div>
+
       </div>
     </section>
 
+    <!--STORE-->
+
+    <section class="store" id="store">
+        <div class="heading">
+          <span>店鋪資訊</span>
+          <h1>地址及營業時間</h1>
+        </div>
+        <div class="store-container">
+          <div class="store-text">
+          <h2>｜ Banqiao 板橋本店 ｜</h2>
+          <h3>新北市板橋區光武街8號
+          <h3>星期二 Tue - 星期六 Sat</h3>
+          <h3>11:00 - 19:30</h3>
+          <h3> - 售完提早打烊 - </h3>
+          <h3> - 造訪前請先來電詢問以免向隅 - </h3>
+          <h3>T: 02-8251-0168</h3>
+        </div>
+        <div class="store-map">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3615.264166055768!2d121.465448477095!3d25.025107677822298!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442a9f3c5864b8d%3A0x90d412d86d1fd40!2z5qyj5pe66bq15YyF5bqX!5e0!3m2!1sen!2suk!4v1728568282518!5m2!1sen!2suk" width="600" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        </div>
+    </section>
 
     <!-- Link to Custom Js-->
     <script src="main.js"></script>
