--- a/index.html
+++ b/index.html
@@ -110,7 +110,10 @@
           <h2>｜ Banqiao 板橋本店 ｜</h2>
           <h3>新北市板橋區光武街8號
           <h3>星期二 Tue - 星期六 Sat</h3>
-          <h3>11:00 - 19:30</h3>
+          <div class="openhour">
+            <h3>11:00 - 19:30 | </h3>
+            <div id="store-status"></div>
+          </div>
           <h3> - 售完提早打烊 - </h3>
           <h3> - 造訪前請先來電詢問以免向隅 - </h3>
           <h3>T: 02-8251-0168</h3>
@@ -123,6 +126,7 @@
 
     <!-- Link to Custom Js-->
     <script src="main.js"></script>
+
 </body>
 
 </html>
