--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>欣旺麵包店 HSIN WANG | Taiwan </title>
+    <link rel="icon" href="img/icon.png" type="png">
     <!--lindk to Css-->
     <link rel="stylesheet" href="style.css">
     <!--Box Icons-->
@@ -123,6 +124,23 @@
         </div>
         </div>
     </section>
+
+
+    <!--ABOUT-->
+
+
+  <section class="about">
+
+
+    <div class="heading">
+      <span>關於我們</span>
+      <h1>背景及理念</h1>
+    </div>
+
+
+
+
+  </section>
 
     <!-- Link to Custom Js-->
     <script src="main.js"></script>
