add about section

--- a/index.html
+++ b/index.html
@@ -134,8 +134,15 @@
 
     <div class="heading">
       <span>關於我們</span>
-      <h1>背景及理念</h1>
+      <h1>誠心誠意的麵包與甜點，想成為你們的日常</h1>
     </div>
+      <h3>位於板橋的「欣旺麵包店」，自成立以來，一直致力於為社區帶來新鮮、美味的手工烘焙麵包。我們深信，每一個烘焙產品背後，都有著溫暖的心意和真摯的用心，因此在每一道工序中，我們始終堅持選用天然的食材，並結合傳統手法與現代創意，為每位顧客呈現獨一無二的美味體驗。
+
+        在欣旺麵包店，我們的麵包每天現做現賣，從經典的日式生吐司、香酥的可頌，到融合台式風味的創新麵包，滿足您不同的口味需求。我們的烘焙師們以精湛的技藝，為您帶來口感豐富的麵包與甜點，不僅美味，更蘊含著健康與安心。
+        
+        我們的目標是成為板橋地區的家庭式麵包店，成為您每日生活中不可或缺的一部分。無論是日常早餐、下午茶時光，還是特別的慶祝場合，我們都希望能夠用麵包傳遞幸福與溫暖。
+        
+        歡迎來到「欣旺麵包店」，讓我們以香氣四溢的烘焙作品，陪伴您的每一個美好時刻！</h3>
 
 
 
