done about story

--- a/index.html
+++ b/index.html
@@ -146,7 +146,9 @@
         <h3>「欣旺」，代表的是 Louis 與 Claire 的新希望，</h3>
         <h3>也是他們共同打造的夢想。</h3>
         <br>
-        <h3>兩位創辦人，帶著對麵包與甜點的熱情，從不同的背景出發，最終在這裡相遇，開始了一段全新的旅程。</h3>
+        <h3>兩位創辦人，帶著對麵包與甜點的熱情，</h3>
+        <h3>從不同的背景出發，</h3>
+        <h3>最終在這裡相遇，開始了一段全新的旅程。</h3>
         <br>
 
       </div>
@@ -162,18 +164,24 @@
         <h3>Louis 堅持用天然食材，像是新鮮火龍果製作的吐司；</h3>
         <h3>Claire追求甜點的極致，享受製作過程中的每個細節。</h3>
       </div>
-      
+
+
+      <div class="about-img-2">
+        <img src="img/IMG_9368.JPG" alt="" srcset="">
+      </div>
+
+      <div class="about-text-2">
+        <h3>兩人背景不同，一個專注麵包，一個專長甜點，</h3>
+        <h3>但在彼此的專長中找到平衡，為顧客帶來獨特的味覺體驗。</h3>
+        <br>
+        <h3>我們希望欣旺成為顧客感受溫暖的地方，</h3>
+        <h3>用美味的麵包和甜點，陪伴每個美好日常。</h3>
+      </div>
+
     </section>
 
-    <section class="about-container-1">
 
 
-
-    </section>
-
-
-
-    <h3>兩人背景不同，一個專注麵包，一個專長甜點，但在彼此的專長中找到平衡，為顧客帶來獨特的味覺體驗。我們希望欣旺成為顧客感受溫暖的地方，用美味的麵包和甜點，陪伴每個美好日常。</h3>
 
   </section>
 
