add contact part

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
       <li><a href="#home">Home</a></li>
       <li><a href="#order">Order</a></li>
       <li><a href="#store">Store</a></li>
-      <li><a href="#store">Q&A</a></li>
       <li><a href="#about">About</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
@@ -133,7 +132,7 @@
   <!--ABOUT-->
 
 
-  <section class="about">
+  <section class="about" id="about">
 
     <div class="heading">
       <span>關於我們</span>
@@ -179,11 +178,26 @@
       </div>
 
     </section>
+  </section>
 
 
-
+  <!--Contact-->
+  <section class="contact" id="contact">
+    <div class="social">
+      <a href="#"><i class='bx bxl-facebook'></i></a>
+      <a href="#"><i class='bx bxl-instagram'></i></a>
+      <a href="#"><i class='bx bx-envelope'></i></a>
+    </div>
+    <div class="links">
+      <a href="#">Privacy Policy</a>
+      <a href="#">Terms of Use</a>
+    </div>
+    <p>&#169; Hsinwang All Right Reserved</p>
 
   </section>
+
+
+
 
   <!-- Link to Custom Js-->
   <script src="main.js"></script>
