add links for footer

--- a/index.html
+++ b/index.html
@@ -184,20 +184,17 @@
   <!--Contact-->
   <section class="contact" id="contact">
     <div class="social">
-      <a href="#"><i class='bx bxl-facebook'></i></a>
-      <a href="#"><i class='bx bxl-instagram'></i></a>
-      <a href="#"><i class='bx bx-envelope'></i></a>
+      <a href="https://www.facebook.com/hsinwangbakery/"><i class='bx bxl-facebook'></i></a>
+      <a href="https://www.instagram.com/hsinwangbakery/"><i class='bx bxl-instagram'></i></a>
+      <a href="mailto:hsinwangbakery0505@gmail.com?subject=Hello&body=This is a message"><i
+          class='bx bx-envelope'></i></a>
     </div>
-    <div class="links">
-      <a href="#">Privacy Policy</a>
-      <a href="#">Terms of Use</a>
+    <div class="develope">
+      <p>Website developed by <a href="https://portfolio-yl.vercel.app/" target="_blank" rel="noopener noreferrer">YING
+          LI</a></p>
+      <p>&copy; 2024 YING LI All rights reserved.</p>
     </div>
-    <p>&#169; Hsinwang All Right Reserved</p>
-
   </section>
-
-
-
 
   <!-- Link to Custom Js-->
   <script src="main.js"></script>
