--- a/index.html
+++ b/index.html
@@ -199,6 +199,11 @@
   <!-- Link to Custom Js-->
   <script src="main.js"></script>
 
+  
+  <div id="root"></div><!-- React 將渲染到這個 div -->
+  <script src="main.js" type="module"></script>
+  <script src="bundle.js"></script> <!-- 從 webpack 生成的 JS 檔案 -->
+
 </body>
 
 </html>
