--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>欣旺麵包店 HSIN WANG | Taiwan </title>
   <link rel="icon" href="img/icon.png" type="png">
+
+  <!--lind to bootstrap-->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
   <!--lindk to Css-->
   <link rel="stylesheet" href="style.css">
   <!--Box Icons-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+
 </head>
 
 <body>
@@ -180,6 +184,7 @@
     </section>
   </section>
 
+  <div id="root"></div>
 
   <!--Contact-->
   <section class="contact" id="contact">
@@ -198,11 +203,9 @@
 
   <!-- Link to Custom Js-->
   <script src="main.js"></script>
-
-  
-  <div id="root"></div><!-- React 將渲染到這個 div -->
   <script src="main.js" type="module"></script>
   <script src="bundle.js"></script> <!-- 從 webpack 生成的 JS 檔案 -->
+
 
 </body>
 
