adjuested the app js

--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
         <span>Welcome To</span>
         <h1>欣旺麵包店</h1>
         <h2>Happiness is a <br>tap away</h2>
-        <a href="#" class="btn">Order</a>
       </div>
       <div class="home-img">
         <img src="img/home-img.jpg">
@@ -117,7 +116,7 @@
           <h3>星期二 Tue - 星期六 Sat</h3>
           <div class="openhour">
             <h3>11:00 - 19:30 | </h3>
-            <div id="store-status"></div>
+            <div id="store-status-root"></div> 
           </div>
           <h3> - 售完提早打烊 - </h3>
           <h3> - 造訪前請先來電詢問以免向隅 - </h3>
@@ -184,7 +183,7 @@
     </section>
   </section>
 
-  <div id="root"></div>
+  <div id="info-accordion-root"></div>
 
   <!--Contact-->
   <section class="contact" id="contact">
