--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <li><a href="#order">Order</a></li>
       <li><a href="#store">Store</a></li>
       <li><a href="#about">About</a></li>
+      <li><a href="#QA">Q&A</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
   </header>
@@ -183,8 +184,18 @@
     </section>
   </section>
 
+  <!--Q&A-->
+
+  <section class="QA" id="QA">
+
+  <div class="heading">
+    <span>Q&A</span>
+    <h1>常見問題</h1>
+  </div>
+
   <div id="info-accordion-root"></div>
 
+  </section>  
   <!--Contact-->
   <section class="contact" id="contact">
     <div class="social">
@@ -194,15 +205,13 @@
           class='bx bx-envelope'></i></a>
     </div>
     <div class="develope">
-      <p>Website developed by <a href="https://portfolio-yl.vercel.app/" target="_blank" rel="noopener noreferrer">YING
+      <p>Design by <a href="https://portfolio-yl.vercel.app/" target="_blank" rel="noopener noreferrer">YING
           LI</a></p>
       <p>&copy; 2024 YING LI All rights reserved.</p>
     </div>
   </section>
 
   <!-- Link to Custom Js-->
-  <script src="main.js"></script>
-  <script src="main.js" type="module"></script>
   <script src="bundle.js"></script> <!-- 從 webpack 生成的 JS 檔案 -->
 
 
