--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
     <div class="store-container">
       <div class="store-text">
         <h2>｜ Banqiao 板橋本店 ｜</h2>
-        <h3>新北市板橋區光武街8號
+        <h3>新北市板橋區光武街8號</h3>
+        <h3>（ 近捷運新埔站5號出口 ）</h3>
           <h3>星期二 Tue - 星期六 Sat</h3>
           <div class="openhour">
             <h3>11:00 - 19:30 | </h3>
@@ -199,10 +200,10 @@
   <!--Contact-->
   <section class="contact" id="contact">
     <div class="social">
-      <a href="https://www.facebook.com/hsinwangbakery/"><i class='bx bxl-facebook'></i></a>
-      <a href="https://www.instagram.com/hsinwangbakery/"><i class='bx bxl-instagram'></i></a>
-      <a href="mailto:hsinwangbakery0505@gmail.com?subject=Hello&body=This is a message"><i
-          class='bx bx-envelope'></i></a>
+      <a href="https://www.facebook.com/hsinwangbakery/"><img src="img/facebook_3669678.png" alt=""></i></a>
+      <a href="https://www.instagram.com/hsinwangbakery/"><img src="img/instagram_1384015.png" alt=""></i></a>
+      <a href="mailto:hsinwangbakery0505@gmail.com?subject=Hello&body=This is a message"><img src="img/email_5249753.png" alt=""></a>
+      <a href="https://lin.ee/Eny98PQ"><img src="img/line_3669731.png" alt=""></a>
     </div>
     <div class="develope">
       <p>Design by <a href="https://portfolio-yl.vercel.app/" target="_blank" rel="noopener noreferrer">YING
