--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <li><a href="#contact">Contact</a></li>
     </ul>
   </header>
+
   <!--Home-->
   <div class="home-line">
     <section class="home" id="home">
@@ -45,23 +46,20 @@
     </section>
   </div>
   <!--Order-->
+
+
+
   <section class="order" id="order">
     <div class="heading">
       <span>立即訂購</span>
       <h1>訂購蛋糕</h1>
     </div>
+
     <div class="order-container">
       <div class="box">
         <div class="box-img">
           <img src="img/cake-2.jpg" alt="" srcset="">
         </div>
-        <div class="stars">
-          <i class='bx bxs-star'></i>
-          <i class='bx bxs-star'></i>
-          <i class='bx bxs-star'></i>
-          <i class='bx bxs-star'></i>
-          <i class='bx bxs-star-half'></i>
-        </div>
         <h2>紅烏龍芒果櫻桃蛋糕</h2>
         <span>NTD.1,480</span>
         <a href="#" class="btn">立即訂購</a>
@@ -72,12 +70,14 @@
         <div class="box-img">
           <img src="img/cake-2.jpg" alt="" srcset="">
         </div>
-        <div class="stars">
-          <i class='bx bxs-star'></i>
-          <i class='bx bxs-star'></i>
-          <i class='bx bxs-star'></i>
-          <i class='bx bxs-star'></i>
-          <i class='bx bxs-star-half'></i>
+        <h2>紅烏龍芒果櫻桃蛋糕</h2>
+        <span>NTD.1,480</span>
+        <a href="#" class="btn">立即訂購</a>
+      </div>
+
+      <div class="box">
+        <div class="box-img">
+          <img src="img/cake-2.jpg" alt="" srcset="">
         </div>
         <h2>紅烏龍芒果櫻桃蛋糕</h2>
         <span>NTD.1,480</span>
@@ -88,12 +88,14 @@
         <div class="box-img">
           <img src="img/cake-2.jpg" alt="" srcset="">
         </div>
-        <div class="stars">
-          <i class='bx bxs-star'></i>
-          <i class='bx bxs-star'></i>
-          <i class='bx bxs-star'></i>
-          <i class='bx bxs-star'></i>
-          <i class='bx bxs-star-half'></i>
+        <h2>紅烏龍芒果櫻桃蛋糕</h2>
+        <span>NTD.1,480</span>
+        <a href="#" class="btn">立即訂購</a>
+      </div>
+
+      <div class="box">
+        <div class="box-img">
+          <img src="img/cake-2.jpg" alt="" srcset="">
         </div>
         <h2>紅烏龍芒果櫻桃蛋糕</h2>
         <span>NTD.1,480</span>
