fixed the img fetch issue

--- a/index.html
+++ b/index.html
@@ -54,56 +54,13 @@
       <span>立即訂購</span>
       <h1>訂購蛋糕</h1>
     </div>
-
-    <div class="order-container">
-      <div class="box">
-        <div class="box-img">
-          <img src="img/cake-2.jpg" alt="" srcset="">
-        </div>
-        <h2>紅烏龍芒果櫻桃蛋糕</h2>
-        <span>NTD.1,480</span>
-        <a href="#" class="btn">立即訂購</a>
-      </div>
-
-
-      <div class="box">
-        <div class="box-img">
-          <img src="img/cake-2.jpg" alt="" srcset="">
-        </div>
-        <h2>紅烏龍芒果櫻桃蛋糕</h2>
-        <span>NTD.1,480</span>
-        <a href="#" class="btn">立即訂購</a>
-      </div>
-
-      <div class="box">
-        <div class="box-img">
-          <img src="img/cake-2.jpg" alt="" srcset="">
-        </div>
-        <h2>紅烏龍芒果櫻桃蛋糕</h2>
-        <span>NTD.1,480</span>
-        <a href="#" class="btn">立即訂購</a>
-      </div>
-
-      <div class="box">
-        <div class="box-img">
-          <img src="img/cake-2.jpg" alt="" srcset="">
-        </div>
-        <h2>紅烏龍芒果櫻桃蛋糕</h2>
-        <span>NTD.1,480</span>
-        <a href="#" class="btn">立即訂購</a>
-      </div>
-
-      <div class="box">
-        <div class="box-img">
-          <img src="img/cake-2.jpg" alt="" srcset="">
-        </div>
-        <h2>紅烏龍芒果櫻桃蛋糕</h2>
-        <span>NTD.1,480</span>
-        <a href="#" class="btn">立即訂購</a>
-      </div>
+    
+    <div id="order-section-root"></div>
 
     </div>
   </section>
+
+
 
   <!--STORE-->
 
