added order form

--- a/index.html
+++ b/index.html
@@ -8,29 +8,17 @@
   <link rel="icon" href="img/icon.png" type="png">
 
   <!--lind to bootstrap-->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   <!--lindk to Css-->
   <link rel="stylesheet" href="style.css">
-  <!--Box Icons-->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+
 
 </head>
 
 <body>
   <!--Navabar-->
-  <header>
-    <a href="#" class="logo"><img src="img/logo-trans.png" alt=""></a>
-    <div class="bx bx-menu" id="menu-icon"></div>
 
-    <ul class="navbar">
-      <li><a href="#home">Home</a></li>
-      <li><a href="#order">Order</a></li>
-      <li><a href="#store">Store</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#QA">Q&A</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </header>
+  <div id="navbar-root"></div>
 
   <!--Home-->
   <div class="home-line">
@@ -54,10 +42,13 @@
       <span>立即訂購</span>
       <h1>訂購蛋糕</h1>
     </div>
-    
-    <div id="order-section-root"></div>
 
+    <div id="order-section-root"></div>
+      <br>
+      <br>
+      <a href="Orderform.html" class="btn">立即訂購蛋糕</a>
     </div>
+
   </section>
 
 
@@ -74,14 +65,14 @@
         <h2>｜ Banqiao 板橋本店 ｜</h2>
         <h3>新北市板橋區光武街8號</h3>
         <h3>（ 近捷運新埔站5號出口 ）</h3>
-          <h3>星期二 Tue - 星期六 Sat</h3>
-          <div class="openhour">
-            <h3>11:00 - 19:30 | </h3>
-            <div id="store-status-root"></div> 
-          </div>
-          <h3> - 售完提早打烊 - </h3>
-          <h3> - 造訪前請先來電詢問以免向隅 - </h3>
-          <h3>T: 02-8251-0168</h3>
+        <h3>星期二 Tue - 星期六 Sat</h3>
+        <div class="openhour">
+          <h3>11:00 - 19:30 | </h3>
+          <div id="store-status-root"></div>
+        </div>
+        <h3> - 售完提早打烊 - </h3>
+        <h3> - 造訪前請先來電詢問以免向隅 - </h3>
+        <h3>T: 02-8251-0168</h3>
       </div>
       <div class="store-map">
         <iframe
@@ -148,20 +139,21 @@
 
   <section class="QA" id="QA">
 
-  <div class="heading">
-    <span>Q&A</span>
-    <h1>常見問題</h1>
-  </div>
+    <div class="heading">
+      <span>Q&A</span>
+      <h1>常見問題</h1>
+    </div>
 
-  <div id="info-accordion-root"></div>
+    <div id="info-accordion-root"></div>
 
-  </section>  
+  </section>
   <!--Contact-->
   <section class="contact" id="contact">
     <div class="social">
       <a href="https://www.facebook.com/hsinwangbakery/"><img src="img/facebook_3669678.png" alt=""></i></a>
       <a href="https://www.instagram.com/hsinwangbakery/"><img src="img/instagram_1384015.png" alt=""></i></a>
-      <a href="mailto:hsinwangbakery0505@gmail.com?subject=Hello&body=This is a message"><img src="img/email_5249753.png" alt=""></a>
+      <a href="mailto:hsinwangbakery0505@gmail.com?subject=Hello&body=This is a message"><img
+          src="img/email_5249753.png" alt=""></a>
       <a href="https://lin.ee/Eny98PQ"><img src="img/line_3669731.png" alt=""></a>
     </div>
     <div class="develope">
