--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
   <!--Contact-->
   <section class="contact" id="contact">
     <div class="social">
-      <a href="https://www.facebook.com/hsinwangbakery/"><img src="img/facebook_3669678.png" alt=""></i></a>
-      <a href="https://www.instagram.com/hsinwangbakery/"><img src="img/instagram_1384015.png" alt=""></i></a>
-      <a href="mailto:hsinwangbakery0505@gmail.com?subject=Hello&body=This is a message"><img
+      <a href="https://www.facebook.com/hsinwangbakery/" target="_blank"><img src="img/facebook_3669678.png" alt=""></i></a>
+      <a href="https://www.instagram.com/hsinwangbakery/" target="_blank"><img src="img/instagram_1384015.png" alt=""></i></a>
+      <a href="mailto:hsinwangbakery0505@gmail.com?subject=Hello&body=This is a message" target="_blank"><img
           src="img/email_5249753.png" alt=""></a>
-      <a href="https://lin.ee/Eny98PQ"><img src="img/line_3669731.png" alt=""></a>
+      <a href="https://lin.ee/Eny98PQ" target="_blank"><img src="img/line_3669731.png" alt=""></a>
     </div>
     <div class="develope">
       <p>Design by <a href="https://portfolio-yl.vercel.app/" target="_blank" rel="noopener noreferrer">YING
