--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h2>Happiness is a <br>tap away</h2>
       </div>
       <div class="home-img">
-        <img src="img/home-img.jpg">
+        <img src="img/cake-collection.png">
       </div>
     </section>
   </div>
