updated navbar logoicon

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
   <div class="home-line">
     <section class="home" id="home">
       <div class="home-text">
-        <span>Welcome To</span>
-        <h1>欣旺麵包店</h1>
+       <img src="img/欣旺-removebg-preview (1).png" alt=""></img>
         <h2>Happiness is a <br>tap away</h2>
       </div>
       <div class="home-img">
