--- a/ProductPage.html
+++ b/ProductPage.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>欣旺麵包店 HSIN WANG | 訂購表單 </title>
+  <title>欣旺麵包店 HSIN WANG </title>
   <link rel="icon" href="img/icon.png" type="png">
 
   <!--lind to bootstrap-->
@@ -20,10 +20,7 @@
   <!--Navabar-->
 
   <div id="navbar-root"></div>
-
-  <h2>this is productpage</h2>
-
-    <div id="product-page-root"></div>
+  <div id="product-page-root"></div>
 
   <!-- Link to Custom Js-->
   <script src="bundle.js"></script> <!-- 從 webpack 生成的 JS 檔案 -->
