--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
   <div id="root"></div>
 
   <!-- Link to Custom JS -->
-  <script src="bundle.js"></script> <!-- Bundled React JS -->
+  <script src="dist/bundle.js"></script> <!-- Bundled React JS -->
 </body>
 </html>
