--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>欣旺麵包店 HSIN WANG | Taiwan</title>
-  <link rel="icon" href="img/icon.png" type="png">
+  <link rel="icon" href="img/icon.png" type="image/png">
   <!-- Link to Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   <!-- Link to Custom CSS -->
@@ -15,6 +15,6 @@
   <div id="root"></div>
 
   <!-- Link to Custom JS -->
-  <script src="dist/bundle.js"></script> <!-- Bundled React JS -->
+  <script src="/bundle.js"></script> <!-- Bundled React JS -->
 </body>
 </html>
